tests/dfrouter/errors/detector_files/broken_detectors_file1b/errors.dfrouter
Error: Unknown lane 'xxx_1' for detector 'MQ11Fs2' in 'input_messstrecke.det.xml'.
Quitting (on error).
